--- a/package/Config.in
+++ b/package/Config.in
@@ -390,6 +390,7 @@ endif
 	source "package/qt6/Config.in"
 	source "package/tekui/Config.in"
 	source "package/weston/Config.in"
+	source "package/lvgl/Config.in"
 	source "package/x11r7/Config.in"
 
 comment "X applications"
